OD services, consists:
- update Repository pattern
- skeleton for cmd/qry
- unit tests
